src/test/ui/issues/issue-34839.stderr
error: compilation successful
  --> $DIR/issue-34839.rs:21:1
   |
LL | fn main() {}    //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

